Skip empty stackframes when unwinding exceptions

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • DevProd Test Infrastructure
    • Fully Compatible
    • Correctness 2026-03-24
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Mochalite tests have a lot of try/catch behaviors to detect failures but continue from testpoint to testpoint. These are still "uncaught" exceptions and are appropriately stopped at when in JS debug mode.

      However, advancing the unwind all the way to the end reaches an empty stack frame. When not handled, other logic tries to make relative/absolute paths out of blanks, and the debugger tries to open a file that doesn't exist (which resolved to just the '.' directory). Users have to click continue but they can't even tell where they're at.

      That last stack frame was actually coming from the C++ hook that was calling the mochalite "closer" to actually run the tests after the shell had loaded everything and is beginning its shutdown. There is no JS frame to reference at this point.

      Now, clicking "continue" on the debugger will gracefully unwind all the way to the test completion, skipping that last "empty frame".
      Added a unittest for empty frames, even though it already "just worked", but being defensive since this is a valid use case to upkeep.

            Assignee:
            Steve McClure
            Reporter:
            Steve McClure
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: