SERVER-121753: Skip empty stackframes when unwinding exceptions (#49693)

GitOrigin-RevId: 1b04d8bea8c2e5e4236106929d492cc3c23b116e