src/mongo/shell/debugger/protocol_test.cpp
@@ -85,6 +85,18 @@ TEST(StackTraceRequest, parseRequestAndResponse) {
     ASSERT_EQ(response.getJson(), expectedResponse);
 }
 
+TEST(StackTraceRequest, EmptyFrames) {
+
+    std::string json = R"({"type":"request","seq":17,"command":"stackTrace","arguments":{}})";
+    auto request = std::static_pointer_cast<StackTraceRequest>(Request::fromJSON(json));
+
+    std::vector<StackFrame> frames = {};
+    auto response = request->response(frames);
+    std::string expectedResponse =
+        R"({ "type" : "response", "seq" : 17, "body" : { "stackFrames" : [] } })";
+    ASSERT_EQ(response.getJson(), expectedResponse);
+}
+
 TEST(ContinueRequest, parseRequestAndResponse) {
 
     std::string json = R"({"type":"request","seq":17,"command":"continue","arguments":{}})";
